# func_api

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: demo.py
func_api/: __init__.py  app.py  decorators.py  errors.py  request.py  response.py  security.py
tests/: test_app.py
