[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "func_api"
version = "1.0.0"
description = "Convert ordinary Python functions into HTTP API endpoints via decorators, with built-in security."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "func_api contributors"}]
keywords = ["api", "decorator", "http", "rest", "microservice"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/func-api/func_api"

[project.optional-dependencies]
dev = ["pytest", "requests", "build", "twine"]

[tool.setuptools.packages.find]
include = ["func_api*"]
